--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,30 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GeoForge System</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
+  <title>GeoForge System - World Map</title>
   <style>
-    #map {
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #2c3e50; /* 背景を海の色に合わせる */
+    }
+    svg {
+      width: 100vw;
       height: 100vh;
+    }
+    .hex {
+      stroke: rgba(255, 255, 255, 0.1); /* 境界線を少し控えめに */
+      stroke-width: 1;
     }
   </style>
 </head>
 <body>
-  <div id="map"></div>
+  <svg id="hexmap"></svg>
+  
+  <!-- Simplex Noise ライブラリを読み込む -->
+  <!--script src="https://cdn.jsdelivr.net/npm/simplex-noise@4.0.1/dist/esm/simplex-noise.js"></script-->
+
   <script type="module" src="./main.js"></script>
 </body>
 </html>
