Node.js バージョンを明示

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v0.0.8</title>
-  <!-- ★★★ 変更点：外部CSSファイルを読み込みます ★★★ -->
+  <title>GeoForge System - World Map v0.1.11</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- ★★★ 変更点：UI要素を追加 ★★★ -->
+  <div class="ui-container">
+    <button id="toggleManaOverlay">龍脈表示</button>
+  </div>
   <svg id="hexmap"></svg>
   <script type="module" src="./main.js"></script>
 </body>
