--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,16 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v0.1.11</title>
+  <title>GeoForge System - World Map v0.4.0</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- ★★★ 変更点：UI要素を追加 ★★★ -->
   <div class="ui-container">
     <button id="toggleManaOverlay">龍脈表示</button>
+    <!-- ★★★ 変更点：ボタンを2つに分割 ★★★ -->
+    <button id="toggleClimateOverlay">気候表示</button>
+    <button id="toggleTempOverlay">気温表示</button>
+    <button id="toggleElevationOverlay">標高表示</button>
   </div>
   <svg id="hexmap"></svg>
   <script type="module" src="./main.js"></script>
