--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v0.4.0</title>
+  <title>GeoForge System - World Map v0.5.0</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="ui-container">
     <button id="toggleManaOverlay">龍脈表示</button>
-    <!-- ★★★ 変更点：ボタンを2つに分割 ★★★ -->
-    <button id="toggleClimateOverlay">気候表示</button>
+    <!-- ★★★ 変更点：ボタンの構成を更新 ★★★ -->
+    <button id="toggleClimateZoneOverlay">気候帯表示</button>
+    <button id="togglePrecipOverlay">降水量表示</button>
     <button id="toggleTempOverlay">気温表示</button>
     <button id="toggleElevationOverlay">標高表示</button>
   </div>
