Node.js バージョンを明示

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v0.5.0</title>
+  <title>GeoForge System - World Map v0.6.0</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <button id="toggleClimateZoneOverlay">気候帯表示</button>
     <button id="togglePrecipOverlay">降水量表示</button>
     <button id="toggleTempOverlay">気温表示</button>
-    <button id="toggleElevationOverlay">標高表示</button>
+    <button id="toggleElevationOverlay">土地利用消去</button>
   </div>
   <svg id="hexmap"></svg>
   <script type="module" src="./main.js"></script>
