Node.js バージョンを明示

--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,6 @@
 
   <svg id="hexmap"></svg>
   <script type="module" src="./main.js"></script>
+  <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
 </body>
 </html>
