Node.js バージョンを明示

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v0.8.2</title>
+  <title>GeoForge System - World Map v0.9.0</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="loading-overlay">
     <div class="loading-content">
-      <h1 id="loading-title">GeoForge SYSTEM で<br>世界を創造しています！</h1>
+      <h1 id="loading-title">GeoForge SYSTEM v0.9.0<br>世界を創造しています！</h1>
       <div id="loading-log"></div>
     </div>
   </div>
