--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v1.3.1</title>
+  <title>GeoForge System - World Map v1.3.3</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="loading-overlay">
     <div class="loading-content">
-      <h1 id="loading-title">GeoForge SYSTEM v1.3.1<br>世界を創造しています！</h1>
+      <h1 id="loading-title">GeoForge SYSTEM v1.3.3<br>世界を創造しています！</h1>
       <div id="loading-log"></div>
     </div>
   </div>
@@ -27,7 +27,7 @@
     <button id="toggleFishingOverlay">漁業</button>
     <hr>
     <button id="togglePopulationOverlay">人口</button>
-    <button id="toggleTerritoryOverlay">領地表示</button> <!-- ★★★ 新規追加 ★★★ -->
+    <button id="toggleTerritoryOverlay">領地表示</button>
   </div>
   
   <div id="population-display"></div>
