--- a/src/rulebook.html
+++ b/src/rulebook.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>運命を刻む元帳 ベンチャー of テイルズ TRPG(仮)</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="rulebook.css">
 </head>
 <body>
     <header>
