--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v1.6.5</title>
+  <title>GeoForge System - World Map v1.6.6</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
   <div id="loading-overlay">
     <div class="loading-content">
-      <h1 id="loading-title">GeoForge SYSTEM v1.6.5<br>世界を創造しています！</h1>
+      <h1 id="loading-title">GeoForge SYSTEM v1.6.6<br>世界を創造しています！</h1>
       <div id="loading-log"></div>
     </div>
   </div>
@@ -19,7 +19,7 @@
     <button id="toggleClimateZoneOverlay">気候帯表示</button>
     <button id="togglePrecipOverlay">降水量表示</button>
     <button id="toggleTempOverlay">気温表示</button>
-    <button id="toggleElevationOverlay">土地利用消去</button>
+    <button id="toggleElevationOverlay">土地利用非表示</button>
     <!-- ★★★ 以下を追記 ★★★ -->
     <hr> <!-- 区切り線 -->
     <button id="toggleAgriOverlay">農業</button>
@@ -27,7 +27,7 @@
     <button id="toggleMiningOverlay">鉱業</button>
     <button id="toggleFishingOverlay">漁業</button>
     <hr>
-    <button id="togglePopulationOverlay">人口</button>
+    <button id="togglePopulationOverlay">人口分布</button>
     <button id="toggleTerritoryOverlay">領地表示</button>
   </div>
   
