--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>GeoForge System - World Map v1.6.6</title>
+  <title>GeoForge System - World Map v1.6.12</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
   <div id="loading-overlay">
     <div class="loading-content">
-      <h1 id="loading-title">GeoForge SYSTEM v1.6.6<br>世界を創造しています！</h1>
+      <h1 id="loading-title">GeoForge SYSTEM v1.6.12<br>世界を創造しています！</h1>
       <div id="loading-log"></div>
     </div>
   </div>
@@ -29,6 +29,7 @@
     <hr>
     <button id="togglePopulationOverlay">人口分布</button>
     <button id="toggleTerritoryOverlay">領地表示</button>
+    <button id="toggleWhiteMapOverlay">白地図表示</button>
   </div>
   
   <div id="population-display"></div>
