--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
   <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
   <div id="loading-overlay">
     <div class="loading-content">
-      <h1 id="loading-title">GeoForge SYSTEM v1.9.11<br>世界を創造しています！</h1>
+      <h1 id="loading-title">GeoForge SYSTEM v1.10.12<br>世界を創造しています！</h1>
+      <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
+        <div id="progress-bar" class="progress-bar"></div>
+      </div>
       <div id="loading-log"></div>
     </div>
   </div>
@@ -72,6 +75,15 @@
                   <li><button id="toggleFishingLayer">漁業</button></li>
               </ul>
               <p class="note">※酪農、狩猟は現在未実装です。</p>
+          </details>
+
+          <div id="legend-container" class="legend-container"></div>
+
+          <details>
+              <summary>システム</summary>
+              <ul>
+                  <li><button id="force-regenerate-btn">強制再生成</button></li>
+              </ul>
           </details>
       </aside>
 
