--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
   <div id="loading-overlay">
     <div class="loading-content">
-      <h1 id="loading-title">GeoForge SYSTEM v1.10.19<br>世界を創造しています！</h1>
+      <h1 id="loading-title">GeoForge SYSTEM v1.10.20<br>世界を創造しています！</h1>
       <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
         <div id="progress-bar" class="progress-bar"></div>
       </div>
@@ -17,11 +17,10 @@
     </div>
   </div>
 
-  <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
+  <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox" checked>
   <label for="menu-toggle" class="menu-toggle-label">
       <span></span>
   </label>
-  <div class="overlay"></div>
 
   <div class="container">
       <!-- ★★★ ここからUI構造を新しい分類に変更 ★★★ -->
