--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-        <h1 id="loading-title">GeoForge SYSTEM v1.16.37<br>世界を創造しています！</h1>
+        <h1 id="loading-title">GeoForge SYSTEM v1.17.39<br>世界を創造しています！</h1>
         <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -60,6 +60,7 @@
                     <li><button id="togglePrecipLayer">降水量</button></li>
                     <li><button id="toggleClimateZoneLayer">気候帯</button></li>
                     <li><button id="togglePopulationLayer">人口分布</button></li>
+                    <li><button id="toggleMonsterLayer">魔物分布</button></li>
                 </ul>
             </details>
             
