--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-        <h1 id="loading-title">GeoForge SYSTEM v1.17.39<br>世界を創造しています！</h1>
+        <h1 id="loading-title">GeoForge SYSTEM v1.18.40<br>世界を創造しています！</h1>
         <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -73,8 +73,9 @@
                     <li><button id="toggleForestLayer">林業</button></li>
                     <li><button id="toggleMiningLayer">鉱業</button></li>
                     <li><button id="toggleFishingLayer">漁業</button></li>
+                    <li><button id="toggleHuntingLayer">狩猟</button></li>
                 </ul>
-                <p class="note">※酪農、狩猟は現在未実装です。</p>
+                <p class="note">※酪農は現在未実装です。</p>
             </details>
 
             <div id="legend-container" class="legend-container"></div>
