--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-        <h1 id="loading-title">GeoForge SYSTEM v1.18.40<br>世界を創造しています！</h1>
+        <h1 id="loading-title">GeoForge SYSTEM v1.18.44<br>世界を創造しています！</h1>
         <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -69,11 +69,13 @@
                 <summary>資源</summary>
                 <ul>
                     <li><button id="toggleManaLayer">魔力 (龍脈)</button></li>
-                    <li><button id="toggleAgriLayer">農業</button></li>
-                    <li><button id="toggleForestLayer">林業</button></li>
-                    <li><button id="toggleMiningLayer">鉱業</button></li>
-                    <li><button id="toggleFishingLayer">漁業</button></li>
-                    <li><button id="toggleHuntingLayer">狩猟</button></li>
+                    <li><button id="toggleAgriLayer">農業適性</button></li>
+                    <li><button id="toggleForestLayer">林業適性</button></li>
+                    <li><button id="toggleMiningLayer">鉱業適性</button></li>
+                    <li><button id="toggleFishingLayer">漁業適性</button></li>
+                    <li><button id="toggleHuntingLayer">狩猟適性</button></li>
+                    <li><button id="togglePastoralLayer">牧畜適性</button></li>
+                    <li><button id="toggleLivestockLayer">家畜適性</button></li>
                 </ul>
                 <p class="note">※酪農は現在未実装です。</p>
             </details>
