--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
             <details open>
                 <summary>レイヤー</summary>
                 <ul>
+                    <li><button id="toggleBeachLayer" class="active">砂浜</button></li>
                     <li><button id="toggleVegetationLayer" class="active">植生</button></li>
                     <li><button id="toggleReliefLayer" class="active">レリーフ</button></li>
                     <li><button id="toggleContourLayer" class="active">等高線</button></li>
