--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="//accaii.com/geoforge/script.js" async></script><noscript><img src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-        <h1 id="loading-title">GeoForge SYSTEM v1.20.51<br>世界を創造しています！</h1>
+        <h1 id="loading-title">GeoForge SYSTEM v1.20.52<br>世界を創造しています！</h1>
         <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -116,6 +116,8 @@
                     </ul>
               </div>
             </details>
+            
+            <p>&copy; 2025 Candle's. All rights reserved.</p>
         </aside>
 
         <main class="main-content">
