ルールブック改定

--- a/src/rulebook.html
+++ b/src/rulebook.html
@@ -120,6 +120,6 @@
         <p>&copy; 2025 Candle's. All rights reserved.</p>
     </footer>
 
-    <script src="rulebook.js"></script>
+    <script type="module" src="./rulebook.js"></script>
 </body>
 </html>
