ルールブック改定

--- a/src/rulebook.html
+++ b/src/rulebook.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,8 @@
 
 <body>
     <!--解析タグ-->
-    <script src="//accaii.com/ventureoftales/script.js" async></script><noscript><img src="//accaii.com/ventureoftales/script?guid=on"></noscript>
+    <script src="//accaii.com/ventureoftales/script.js" async></script><noscript><img
+            src="//accaii.com/ventureoftales/script?guid=on"></noscript>
 
     <!-- ヘッダーエリア -->
     <header class="site-header">
@@ -30,7 +32,7 @@
             </div>
 
             <h1 class="site-logo"><a href="#">ベンチャー of テイルズ TRPG</a></h1>
-            
+
             <div class="right-controls">
                 <button id="search-btn" class="icon-btn" aria-label="検索" title="検索">
                     <span class="material-icons-round">search</span>
@@ -51,12 +53,13 @@
             <h2>目次</h2>
             <button id="close-menu-btn" class="icon-btn"><span class="material-icons-round">close</span></button>
         </div>
-        
+
         <div class="external-links">
-            <a href="https://script.google.com/macros/s/AKfycbwRLJth6_1xB_MVuGwLhbtBbTuA51kyDOO8oehRjRowkEgEE7PWRxP5fEasB1Pu2Tn2/exec" target="_blank" class="nav-btn primary">
+            <a href="https://script.google.com/macros/s/AKfycbwRLJth6_1xB_MVuGwLhbtBbTuA51kyDOO8oehRjRowkEgEE7PWRxP5fEasB1Pu2Tn2/exec"
+                target="_blank" class="nav-btn primary">
                 <span class="material-icons-round">description</span> 履歴書 (GAS)
             </a>
-            <a href="https://geoforge-system.onrender.com/" target="_blank" class="nav-btn secondary">
+            <a href="index.html" target="_blank" class="nav-btn secondary">
                 <span class="material-icons-round">public</span> GeoForge System
             </a>
         </div>
@@ -87,11 +90,26 @@
                 <div class="ref-block">
                     <h3>目標値の難易度目安 (1d10+能力値)</h3>
                     <table>
-                        <tr><th>難易度</th><th>目標値</th></tr>
-                        <tr><td>易しい</td><td>4</td></tr>
-                        <tr><td>普通</td><td>6</td></tr>
-                        <tr><td>困難</td><td>8</td></tr>
-                        <tr><td>超困難</td><td>10</td></tr>
+                        <tr>
+                            <th>難易度</th>
+                            <th>目標値</th>
+                        </tr>
+                        <tr>
+                            <td>易しい</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>普通</td>
+                            <td>6</td>
+                        </tr>
+                        <tr>
+                            <td>困難</td>
+                            <td>8</td>
+                        </tr>
+                        <tr>
+                            <td>超困難</td>
+                            <td>10</td>
+                        </tr>
                     </table>
                 </div>
                 <div class="ref-block">
@@ -122,4 +140,5 @@
 
     <script type="module" src="./rulebook.js"></script>
 </body>
+
 </html>
