ルールブック改定

--- a/src/rulebook.html
+++ b/src/rulebook.html
@@ -134,6 +134,11 @@
 
     <!-- フッター -->
     <footer class="site-footer">
+        <div class="footer-links">
+            <a href="https://script.google.com/macros/s/AKfycbwRLJth6_1xB_MVuGwLhbtBbTuA51kyDOO8oehRjRowkEgEE7PWRxP5fEasB1Pu2Tn2/exec"
+                target="_blank">履歴書 (GAS)</a> |
+            <a href="index.html" target="_blank">GeoForge System</a>
+        </div>
         <p>Last Update: <span id="last-update"></span></p>
         <p>&copy; 2025 Candle's. All rights reserved.</p>
     </footer>
