--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM v2.2.3<br>世界を創造しています！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM v2.2.6<br>世界を創造しています！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
@@ -115,8 +115,9 @@
                         <li><button id="step2-climate-btn" disabled>② 気候・植生生成</button></li>
                         <li><button id="step3-settlement-btn" disabled>③ 集落生成</button></li>
                         <li><button id="step4-nation-btn" disabled>④ 道路・国家生成</button></li>
-                        <li><button id="step5-save-btn" disabled>⑤ 保存</button></li>
+                        <li><button id="step5-save-btn" disabled>⑤ 保存（GAS）</button></li>
                         <li><button id="download-json-btn" disabled>⑥ JSONダウンロード</button></li>
+                        <li><button id="load-gas-btn">⑦ GASからロード</button></li>
                     </ul>
                 </div>
             </details>
