--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8" />
     <title>GeoForge System - World Map</title>
     <link rel="stylesheet" href="style.css">
+    <!-- フォント読み込み -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <!-- アイコンフォント -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
 
 <body>
