modified:   .gitignore 	modified:   src/index.html 	modified:   src/style.css 	modified:   src/ui.js

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox" checked>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
     <label for="menu-toggle" class="menu-toggle-label">
         <span></span>
     </label>
