new file:   src/apple-touch-icon.png 	modified:   src/config.js 	modified:   src/economySimulator.js 	new file:   src/favicon.ico 	new file:   src/icon-192.png 	new file:   src/icon-512.png 	modified:   src/index.html 	modified:   src/infoWindow.js

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <title>GeoForge System - World Map</title>
+
+    <!-- Favicon設定 -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+
     <link rel="stylesheet" href="style.css">
+
     <!-- フォント読み込み -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +26,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM v2.5.22<br>世界を創造しています！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM v2.5.23<br>世界を創造しています！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
