--- a/src/rulebook.html
+++ b/src/rulebook.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>運命を刻む元帳 ベンチャー of テイルズ TRPG(仮)</title>
+    <!-- Favicon設定 -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+    
     <link rel="stylesheet" href="rulebook.css">
     <!-- フォント読み込み -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
