--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM v2.7.9<br>世界を創造しています！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM v2.7.10<br>世界を創造しています！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
@@ -83,7 +83,7 @@
                     <li><button id="toggleRoadLayer" class="active">道路網</button></li>
                     <li><button id="toggleTerritoryLayer">領地</button></li>
                     <li><button id="toggleRidgeWaterSystemLayer">稜線水系図</button></li>
-                    <li><button id="toggleHexBorderLayer" class="active">ヘックス境界</button></li>
+                    <li><button id="toggleHexBorderLayer">ヘックス境界</button></li>
                 </ul>
             </details>
 
