GeoForge world_data.json 追加

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM v2.7.14<br>世界を創造しています！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM v2.7.15<br>世界を創造しています！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
@@ -38,6 +38,35 @@
     <label for="menu-toggle" class="menu-toggle-label">
         <span></span>
     </label>
+
+    <div class="shortcut-bar">
+        <button id="shortcut-map-type" class="shortcut-btn" title="基本地図（地形図/白地図）">
+            <span class="material-icons-round">map</span>
+        </button>
+        <button id="shortcut-vegetation" class="shortcut-btn active" title="植生レイヤー">
+            <span class="material-icons-round">forest</span>
+        </button>
+        <button id="shortcut-relief" class="shortcut-btn active" title="レリーフ">
+            <span class="material-icons-round">landscape</span>
+        </button>
+        <button id="shortcut-contour" class="shortcut-btn active" title="等高線">
+            <span class="material-icons-round">waves</span>
+        </button>
+        <button id="shortcut-settlement" class="shortcut-btn active" title="集落・国境レイヤー">
+            <span class="material-icons-round">location_city</span>
+        </button>
+        <button id="shortcut-road" class="shortcut-btn active" title="道路網レイヤー">
+            <span class="material-icons-round">add_road</span>
+        </button>
+        <button id="shortcut-territory" class="shortcut-btn" title="領地レイヤー">
+            <span class="material-icons-round">flag</span>
+        </button>
+        <button id="shortcut-hex-border" class="shortcut-btn" title="ヘックス境界">
+            <span class="material-icons-round">grid_on</span>
+        </button>
+    </div>
+
+
 
     <div class="container">
         <aside class="sidebar">
