GeoForge world_data.json 追加

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM v2.7.16<br>世界を創造しています！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM v2.7.17<br>世界を創造しています！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
@@ -154,8 +154,8 @@
                 <div class="generation-controls">
                     <p class="note">ステップごとに世界を生成します。<br>各ステップで再生成が可能です。</p>
                     <ul>
-                        <li><button id="step1-continent-btn">① 大陸・河川生成</button></li>
-                        <li><button id="step2-climate-btn" disabled>② 気候・植生生成</button></li>
+                        <li><button id="step1-continent-btn">① 大陸・気候・河川</button></li>
+                        <li><button id="step2-climate-btn" disabled>② (統合済み)</button></li>
                         <li><button id="step3-settlement-btn" disabled>③ 集落生成</button></li>
                         <li><button id="step4-nation-btn" disabled>④ 道路・国家生成</button></li>
                         <li><button id="step5-save-btn" disabled>⑤ 保存（GAS）</button></li>
