--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM<br>ver.2.7 <small>rev.28</small><br>世界を創造しています！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM<br>ver.2.7 <small>rev.29</small><br>世界を創造しています！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
@@ -176,6 +176,7 @@
     <div id="info-window" class="hidden">
         <div id="info-window-content">
         </div>
+        <button id="copy-info-btn" class="material-icons-round" title="JSON形式でコピー">content_copy</button>
         <button id="info-close-btn" class="material-icons-round" title="閉じる">close</button>
     </div>
 
