--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM<br>ver.2.8 <small>rev.3</small><br>世界を創造します！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM<br>ver.2.8 <small>rev.8</small><br>世界を創造します！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
@@ -167,7 +167,7 @@
                 </div>
             </details>
 
-            <p>&copy; 2025 Candle's. All rights reserved.</p>
+            <p>&copy; 2025 Candle's.<br>All rights reserved.</p>
         </aside>
 
         <main class="main-content">
