--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             src="//accaii.com/geoforge/script?guid=on"></noscript>
     <div id="loading-overlay">
         <div class="loading-content">
-            <h1 id="loading-title">GeoForge SYSTEM<br>ver.2.8 <small>rev.21</small><br>世界を創造します！</h1>
+            <h1 id="loading-title">GeoForge SYSTEM<br>ver.2.8 <small>rev.23</small><br>世界を創造します！</h1>
             <div id="progress-bar-container" class="progress-bar-container" style="display: none;">
                 <div id="progress-bar" class="progress-bar"></div>
             </div>
@@ -63,7 +63,7 @@
         <button id="shortcut-territory" class="shortcut-btn" title="領地レイヤー">
             <span class="material-icons-round">flag</span>
         </button>
-        <button id="shortcut-hex-border" class="shortcut-btn" title="ヘックス境界">
+        <button id="shortcut-hex-border" class="shortcut-btn active" title="ヘックス境界">
             <span class="material-icons-round">grid_on</span>
         </button>
     </div>
@@ -114,7 +114,7 @@
                     <li><button id="toggleRoadLayer" class="active">道路網</button></li>
                     <li><button id="toggleTerritoryLayer">領地</button></li>
                     <li><button id="toggleRidgeWaterSystemLayer">稜線水系図</button></li>
-                    <li><button id="toggleHexBorderLayer">ヘックス境界</button></li>
+                    <li><button id="toggleHexBorderLayer" class="active">ヘックス境界</button></li>
                 </ul>
             </details>
 
